--- a/src/app/components/merchant-pages/merchant/merchant-request/merchant-request.component.html
+++ b/src/app/components/merchant-pages/merchant/merchant-request/merchant-request.component.html
@@ -73,7 +73,7 @@
                     </tr>
                 </ng-template>
             </p-table>
-            <p-paginator [alwaysShow]="false" (onPageChange)="onPageChange($event)" [first]="first" [rows]="10"
+            <p-paginator [alwaysShow]="true" (onPageChange)="onPageChange($event)" [first]="first" [rows]="10"
                 [totalRecords]="totalRecords"></p-paginator>
         </div>
     </div>
