--- a/src/app/components/merchant-pages/order/order.component.html
+++ b/src/app/components/merchant-pages/order/order.component.html
@@ -157,7 +157,8 @@
                     </tr>
                 </ng-template>
             </p-table>
+            <app-paginator [first]="first" [rows]="10" [totalRecords]="totalRecords"
+                (onPageChange)="onPageChange($event)"></app-paginator>
         </div>
     </div>
 </div>
-<p-toast key="toast"></p-toast>
