--- a/src/app/components/shared/product-card/product-card.component.html
+++ b/src/app/components/shared/product-card/product-card.component.html
@@ -1,4 +1,5 @@
-<div *ngIf="!isLoading; else loading" class="card m-2" (click)="onCardClick()">
+<div *ngIf="!isLoading; else loading" class="card m-2" [style.max-width]="isFitWidth ? '100%' : '220px'"
+    (click)="onCardClick()">
     <div class="image-container">
 
         <img class="img" src="{{ product.image || product.images[0] || 'https://via.placeholder.com/320x300' }}"
@@ -25,7 +26,7 @@
 </div>
 
 <ng-template #loading>
-    <div class="card m-2">
+    <div class="card m-2" [style.max-width]="'220px'">
         <p-skeleton class="img" height="200px"></p-skeleton>
         <p-skeleton class="card-content w-100 d-flex flex-column p-3" height="3rem">
         </p-skeleton>
