--- a/src/app/components/shared/product-card/product-card.component.less
+++ b/src/app/components/shared/product-card/product-card.component.less
@@ -9,15 +9,15 @@
     justify-content: flex-start;
     align-items: flex-start;
     display: inline-flex;
-    max-width: 200px;
     min-width: 160px;
     height: 360px;
     border-radius: 8px;
     box-shadow: 2px 5px 2px 0px rgba(0, 0, 0, 0.12);
     -webkit-box-shadow: 2px 5px 2px 0px rgba(0, 0, 0, 0.12);
     -moz-box-shadow: 2px 5px 2px 0px rgba(0, 0, 0, 0.12);
-
+    width: 100%;
     .image-container {
+        width: 100%;
         transition: transform 0.2s;
         overflow: hidden;
     }
