--- a/src/app/components/user-pages/landing/landing.component.less
+++ b/src/app/components/user-pages/landing/landing.component.less
@@ -58,9 +58,17 @@ swiper-slide {
     padding: 2rem;
     border-radius: 20px;
     max-height: 40vh;
-    background: #ff4b1f;
-    background: -webkit-linear-gradient(to right, #1fddff, #ff4b1f);
-    background: linear-gradient(to right, #1fddff, #ff4b1f);
+    background: #ff4b1f; /* fallback for old browsers */
+    background: -webkit-linear-gradient(
+        to right,
+        #ff9068,
+        #ff4b1f
+    ); /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(
+        to right,
+        #ff9068,
+        #ff4b1f
+    ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
     display: flex;
     .banner-content {
