--- a/src/app/components/user-pages/product-detail/product-detail.component.html
+++ b/src/app/components/user-pages/product-detail/product-detail.component.html
@@ -183,12 +183,13 @@
         </div>
     </div> -->
 
+
     <section class="section my-4 product" id="shop" aria-label="product">
         <div class="container-fluid mx-auto">
-            <h4 class="h4 section-title">Best Seller</h4>
+            <h4 class="h4 section-title">Recommend for you</h4>
 
             <ul class="grid-list d-flex gap-4">
-                <li *ngFor="let item of mostBuy" style="cursor: pointer" (click)="onProdClick(item)">
+                <li *ngFor="let item of similarProd" style="cursor: pointer" (click)="onProdClick(item)">
                     <app-product-card [product]="item"></app-product-card>
                 </li>
             </ul>
@@ -196,36 +197,11 @@
     </section>
     <section class="section my-4 product" id="shop" aria-label="product">
         <div class="container-fluid mx-auto">
-            <h4 class="h4 section-title">Most View</h4>
+            <h4 class="h4 section-title">Best Seller</h4>
 
             <ul class="grid-list d-flex gap-4">
-                <li *ngFor="let item of mostProd" style="cursor: pointer" (click)="onProdClick(item)">
+                <li *ngFor="let item of mostBuy" style="cursor: pointer" (click)="onProdClick(item)">
                     <app-product-card [product]="item"></app-product-card>
-                    <!-- <div class="product-card">
-                        <div
-                            class="card-banner img-holder"
-                            style="--width: 360; --height: 360"
-                        >
-                            <img
-                                width="120px"
-                                [src]="item.images[0]"
-                                height="120px"
-                                loading="lazy"
-                                alt="Commodo leo sed porta"
-                                class="img-cover default"
-                            />
-                        </div>
-
-                        <div class="card-content">
-                            <h5 class="line-clamp">
-                                {{ item.name }}
-                            </h5>
-
-                            <p class="card-price" value="15">
-                                {{ item.price | currency : "VND" }}
-                            </p>
-                        </div>
-                    </div> -->
                 </li>
             </ul>
         </div>
