--- a/src/app/components/user-pages/shop-view/shop-view.component.html
+++ b/src/app/components/user-pages/shop-view/shop-view.component.html
@@ -64,15 +64,16 @@
             </div>
         </div>
     </div>
-    <div class="shopView-list col-sm-12 col-md-10" infinite-scroll [infiniteScrollDistance]="scrollDistance"
+    <div class=" col-sm-12 col-md-10" infinite-scroll [infiniteScrollDistance]="scrollDistance"
         [infiniteScrollUpDistance]="scrollUpDistance" [infiniteScrollThrottle]="throttle" (scrolled)="onScrollDown()">
         <div *ngIf="!isLoading; else loading" class="w-100 shopView-list">
-            <app-product-card *ngFor="let product of products" [product]="product" class="product"></app-product-card>
+            <app-product-card *ngFor="let product of products" [product]="product" class="product"
+                [isFitWidth]="true"></app-product-card>
             <div *ngIf="isLoadingMore"><app-product-card *ngFor="let _ of [].constructor(size)"
                     [isLoading]="true"></app-product-card>
             </div>
         </div>
-        <ng-template #loading><app-product-card *ngFor="let _ of [].constructor(20)"
+        <ng-template class="w-100 shopView-list" #loading><app-product-card *ngFor="let _ of [].constructor(20)"
                 [isLoading]="true"></app-product-card>
         </ng-template>
 
