--- a/src/app/components/shared/nav-bar/nav-bar.component.less
+++ b/src/app/components/shared/nav-bar/nav-bar.component.less
@@ -122,8 +122,11 @@ nav {
 
 :host::ng-deep {
     .p-listbox {
-        top: 38px !important;
+        top: 58px !important;
         z-index: 100;
-        width: 100%;
+        width: 97%;
+        .p-component {
+            width: 100%;
+        }
     }
 }
