--- a/src/app/components/shared/nav-bar/nav-bar.component.html
+++ b/src/app/components/shared/nav-bar/nav-bar.component.html
@@ -1,15 +1,8 @@
 <nav class="navbar navbar-expand-lg px-4">
     <div class="container-fluid d-flex align-items-center border-bottom">
         <!-- <img class="nav_logo mx-4" src="/assets/imgs/logo.png" alt="Logo" /> -->
-        <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarTogglerDemo01"
-            aria-controls="navbarTogglerDemo01"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-        >
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"
+            aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
@@ -17,22 +10,10 @@
 
             <ul class="navbar-nav mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a
-                        id="home"
-                        class="nav-link"
-                        aria-current="page"
-                        href="/user/home"
-                        >Home</a
-                    >
+                    <a id="home" class="nav-link" aria-current="page" href="/user/home">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a
-                        id="product"
-                        class="nav-link"
-                        aria-current="page"
-                        href="/user/shop"
-                        >Product</a
-                    >
+                    <a id="product" class="nav-link" aria-current="page" href="/user/shop">Product</a>
                 </li>
                 <!-- <li *ngIf="isLogin" class="nav-item">
                     <a
@@ -46,48 +27,23 @@
             </ul>
         </div>
         <div class="header d-flex flex-row justify-content-between w-75">
-            <div
-                *ngIf="isShowSearch"
-                class="d-flex col-9 col-md-7 search-group position-relative"
-            >
+            <div *ngIf="isShowSearch" class="d-flex col-9 col-md-7 search-group position-relative">
                 <div class="p-inputgroup">
-                    <input
-                        type="text"
-                        pInputText
-                        placeholder="Search for product..."
-                        [(ngModel)]="keySearch"
-                        (ngModelChange)="onSearch($event)"
-                    />
-                    <button
-                        type="button"
-                        pButton
-                        icon="pi pi-search"
-                        styleClass="p-button-warn"
-                    ></button>
+                    <input type="text" pInputText placeholder="Search for product..." [(ngModel)]="keySearch"
+                        (ngModelChange)="onSearch($event)" />
+                    <button type="button" pButton icon="pi pi-search" styleClass="p-button-warn"></button>
                 </div>
-                <p-listbox
-                    *ngIf="showSearchRes"
-                    class="position-absolute p-listbox"
-                    [options]="searchRes"
-                    [group]="true"
-                    [listStyle]="{ 'max-height': '250px' }"
-                >
+                <p-listbox *ngIf="showSearchRes" class="position-absolute p-listbox" [options]="searchRes"
+                    [group]="true" [listStyle]="{ 'max-height': '250px' }" emptyMessage="No result matched"
+                    (onClick)="routeToProduct($event.value)">
                     <ng-template let-group pTemplate="group">
                         <div class="flex align-items-center">
                             <span>{{ group.itemName }}</span>
                         </div>
                     </ng-template>
                     <ng-template let-item pTemplate="item">
-                        <div
-                            class="flex align-items-center gap-2 d-flex"
-                            (click)="routeToProduct(item)"
-                        >
-                            <img
-                                *ngIf="item.group == 'Products'"
-                                src="{{ item?.image }}"
-                                width="50px"
-                                height="20px"
-                            />
+                        <div class="flex align-items-center gap-2 d-flex">
+                            <img src="{{ item?.image }}" width="50px" height="20px" />
                             <div>{{ item?.itemName }}</div>
                         </div>
                     </ng-template>
@@ -104,24 +60,17 @@
                         <i class="bi bi-chat" (click)="toChatPage()"></i>
                     </button>
                     <button *ngIf="isLogin" class="nav_profile-cart">
-                        <i
-                            class="bi bi-person"
-                            (click)="menu.toggle($event)"
-                        ></i>
+                        <i class="bi bi-person" (click)="menu.toggle($event)"></i>
                     </button>
 
-                    <button
-                        *ngIf="!isLogin"
-                        style="
+                    <button *ngIf="!isLogin" style="
                             border: solid 1px #ff9b00;
                             color: #ff9b00;
                             border-radius: 5px;
                             width: fit-content;
                             padding: 0px 12px;
                             height: 40px;
-                        "
-                        (click)="toLoginPage()"
-                    >
+                        " (click)="toLoginPage()">
                         Sign in
                     </button>
                 </li>
