--- a/src/app/components/user-pages/shop-view/shop-view.component.html
+++ b/src/app/components/user-pages/shop-view/shop-view.component.html
@@ -57,7 +57,7 @@
                 </div>
                 <div class="d-flex justify-content-center">
 
-                    <button class="btn btn-primary w-fit px-4 m-auto" (click)="applyFilter()">
+                    <button class="btn btn-primary w-fit px-4 m-auto" (click)="applyFilter(true)">
                         Apply Filter
                     </button>
                 </div>
