fix: update recommend

--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -9,7 +9,7 @@
             </div>
         </p-divider>
         <p class="fw-medium">
-            We provide you a large of High Quality Product for your pet. Join with us
+            We provide you a large of High Quality Product. Join with us
             to find more ...
         </p>
     </div>
