--- a/src/app/components/merchant-pages/live/live.component.html
+++ b/src/app/components/merchant-pages/live/live.component.html
@@ -84,7 +84,8 @@
                     </div> -->
 
                         <p-table [value]="listAllProduct" dataKey="name" rowGroupMode="subheader" groupRowsBy="name"
-                            sortField="name" sortMode="single" styleClass="p-datatable-striped">
+                            sortField="name" sortMode="single" styleClass="p-datatable-striped" paginator=" true"
+                            rows="10">
                             <ng-template pTemplate="header">
                                 <tr>
                                     <th width="20px"></th>
@@ -181,8 +182,7 @@
                                 </tr>
                             </ng-template>
                         </p-table>
-                        <p-paginator [alwaysShow]="false" (onPageChange)="onPageChange($event)" [first]="first"
-                            [rows]="10" [totalRecords]="totalRecords"></p-paginator>
+
                     </div>
                 </div>
                 <div *ngIf="isLiveSuccess" class="col-12 xl:col-4">
