update: merchant info

--- a/src/app/components/merchant-pages/merchant/merchant-detail/merchant-detail.component.html
+++ b/src/app/components/merchant-pages/merchant/merchant-detail/merchant-detail.component.html
@@ -1,5 +1,5 @@
 <div class="container p-4">
-    <div class="info col-sm-8">
+    <div class="info col-sm-12">
         <div class="position-relative">
             <div class="cover-img mb-4 position-relative" id="cover"
                 style="background-image: url({{merchantDetail?.merchantCover}}); height: 216px;">
@@ -72,11 +72,9 @@
             </button>
         </div>
     </div>
-    <div class="logo col-sm-4 d-flex justify-content-center align-items-center flex-column">
+    <!-- <div class="logo col-sm-4 d-flex justify-content-center align-items-center flex-column">
         <img src="{{ merchantDetail.merchantAvatar }}" alt="" class="rounded-circle"
             onerror="this.onerror=null;this.src='/assets/no_user.png';" />
-        <!-- <button class="btn btn-primary" (click)="contactRequestor()">
-            Liên hệ
-        </button> -->
-    </div>
+
+    </div> -->
 </div>
