--- a/src/app/components/user-pages/product-detail/product-detail.component.html
+++ b/src/app/components/user-pages/product-detail/product-detail.component.html
@@ -74,7 +74,9 @@
                     ></p-inputNumber> -->
                     <app-quantity [quantity]="numberOfProduct" (onQuantity)="onChangeQty($event)"
                         [max]="selectedVariety?.stockAmount || 0"></app-quantity>
-                    <small *ngIf="isDisableBuy" class="text-danger w-100">Over stock</small>
+                    <small *ngIf="isDisableBuy || selectedVariety?.stockAmount === 0 || !selectedVariety"
+                        class="text-danger w-100">Over
+                        stock</small>
                 </div>
             </div>
 
