--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -97,12 +97,8 @@
                 <ng-template pTemplate="body" let-product>
                     <tr>
                         <td style="width: 15%; min-width: 5rem">
-                            <img
-                                src="{{ product.images[0] }}"
-                                class="shadow-4"
-                                alt="{{ product.name }}"
-                                width="50"
-                            />
+                            <img src="{{ product.images[0] }}" class="shadow-4" alt="{{ product.name }}" width="50"
+                                onerror="this.onerror=null;this.src='/assets/no_prod.jpg';" />
                         </td>
                         <td style="width: 35%; min-width: 7rem">
                             {{ product.name }}
@@ -139,12 +135,8 @@
                 <ng-template pTemplate="body" let-product>
                     <tr>
                         <td style="width: 15%; min-width: 5rem">
-                            <img
-                                src="{{ product.images[0] }}"
-                                class="shadow-4"
-                                alt="{{ product.name }}"
-                                width="50"
-                            />
+                            <img src="{{ product.images[0] }}" class="shadow-4" alt="{{ product.name }}" width="50"
+                                onerror="this.onerror=null;this.src='/assets/no_prod.jpg';" />
                         </td>
                         <td style="width: 35%; min-width: 7rem">
                             {{ product.name }}
@@ -163,11 +155,7 @@
     <div class="col-12 xl:col-12">
         <div class="card">
             <h5>Sales Overview This Week</h5>
-            <p-chart
-                type="line"
-                [data]="chartData"
-                [options]="chartOptions"
-            ></p-chart>
+            <p-chart type="line" [data]="chartData" [options]="chartOptions"></p-chart>
         </div>
     </div>
 </div>
