--- a/src/app/components/merchant-pages/merchant/merchant.component.html
+++ b/src/app/components/merchant-pages/merchant/merchant.component.html
@@ -32,33 +32,33 @@
                         <th></th>
                     </tr>
                 </ng-template>
-                <ng-template pTemplate="body" let-product>
+                <ng-template pTemplate="body" let-merchant>
                     <tr>
                         <td style="width: 14%; min-width: 10rem">
                             <span class="p-column-title">Name</span>
-                            {{ product.merchantId }}
+                            {{ merchant.merchantId }}
                         </td>
 
                         <td>
                             <span>
-                                {{ product.merchantName }}
+                                {{ merchant.merchantName }}
                             </span>
                         </td>
                         <td style="width: 14%; min-width: 8rem">
                             <span class="p-column-title">Created Date</span>
-                            {{ product.createdDate | date }}
+                            {{ merchant.createdDate | date }}
                         </td>
                         <td style="width: 14%; min-width: 10rem">
                             <span class="p-column-title">Phone Number</span>
-                            {{ product.phoneNumber }}
+                            {{ merchant.phoneNumber }}
                         </td>
                         <td>
                             <span class="p-column-title">City</span>
-                            {{ product.cityName }}
+                            {{ merchant.cityName }}
                         </td>
                         <td style="width: 14%; min-width: 10rem">
                             <span class="p-column-title">Rating</span>
-                            <p-rating [ngModel]="product.rating || 0" [readonly]="true" [cancel]="false"></p-rating>
+                            <p-rating [ngModel]="merchant.rating || 0" [readonly]="true" [cancel]="false"></p-rating>
                         </td>
 
                         <td>
