--- a/src/app/components/merchant-pages/order/order.component.html
+++ b/src/app/components/merchant-pages/order/order.component.html
@@ -25,8 +25,9 @@
                     'paymentType',
                     'cityName',
                     'districtName',
-                    'wardName'
-                ]" [(selection)]="selectedVouchers" selectionMode="multiple" [rowHover]="true" dataKey="voucherId">
+                    'wardName',
+                    'invoiceId'
+                ]" [(selection)]="selectedVouchers" selectionMode="multiple" [rowHover]="true" dataKey="invoiceId">
                 <ng-template pTemplate="caption">
                     <div class="flex flex-column md:flex-row md:justify-content-between md:align-items-center">
                         <span>
@@ -88,10 +89,10 @@
                         <!-- <th style="width: 3rem">
                             <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
                         </th> -->
-                        <!-- <th [width]="'20%'" pSortableColumn="type">
-                            Customer
-                            <p-sortIcon field="type"></p-sortIcon>
-                        </th> -->
+                        <th [width]="'20%'" pSortableColumn="invoiceId">
+                            ID
+                            <p-sortIcon field="invoiceId"></p-sortIcon>
+                        </th>
                         <th [width]="'10%'" pSortableColumn="createdDate">
                             Created Date
                             <p-sortIcon field="createdDate"></p-sortIcon>
@@ -124,10 +125,10 @@
                             ></p-tableCheckbox>
                         </td> -->
 
-                        <!-- <td style="width: 14%; min-width: 10rem">
-                            <span class="p-column-title">Type</span>
-                            {{ product?.userName }}
-                        </td> -->
+                        <td style="width: 14%; min-width: 10rem">
+                            <span class="p-column-title">ID</span>
+                            {{ product?.invoiceId }}
+                        </td>
 
                         <td style="width: 14%; min-width: 10rem">
                             <span class="p-column-title">Create Date</span>
