--- a/src/app/components/merchant-pages/sale/sale.component.html
+++ b/src/app/components/merchant-pages/sale/sale.component.html
@@ -3,30 +3,14 @@
         <div class="card px-6 py-6">
             <div class="d-flex mb-2 align-items-center">
                 <h6 class="text-center mb-0 me-4">Select Option</h6>
-                <p-dropdown
-                    [options]="statOption"
-                    optionLabel="name"
-                    [(ngModel)]="selectedOption"
-                    (onChange)="onOptionChange()"
-                ></p-dropdown>
-                <p-calendar
-                    *ngIf="this.selectedOption?.id === 'SPECIFIC'"
-                    class="ms-2"
-                    [(ngModel)]="rangeDates"
-                    placeholder="Select date"
-                    selectionMode="range"
-                    [readonlyInput]="true"
-                    dateFormat="dd/mm/yy"
-                    [showIcon]="true"
-                    (onClickOutside)="onDateChange()"
-                ></p-calendar>
+                <p-dropdown [options]="statOption" optionLabel="name" [(ngModel)]="selectedOption"
+                    (onChange)="onOptionChange()"></p-dropdown>
+                <p-calendar *ngIf="this.selectedOption?.id === 'SPECIFIC'" class="ms-2" [(ngModel)]="rangeDates"
+                    placeholder="Select date" selectionMode="range" [readonlyInput]="true" dateFormat="dd/mm/yy"
+                    [showIcon]="true" (onClickOutside)="onDateChange()"></p-calendar>
 
-                <p-button
-                    class="ms-4"
-                    label="Export as PDF"
-                    icon="pi pi-arrow-circle-down"
-                    (onClick)="generatePDF()"
-                ></p-button>
+                <p-button class="ms-4" label="Export as PDF" icon="pi pi-arrow-circle-down"
+                    (onClick)="generatePDF()"></p-button>
             </div>
             <div class="card w-full">
                 <h5 class="text-left w-full">
@@ -38,12 +22,7 @@
                 <div class="col-6">
                     <div class="card">
                         <h5>Most viewed</h5>
-                        <p-table
-                            [value]="mostView"
-                            [paginator]="true"
-                            [rows]="5"
-                            responsiveLayout="scroll"
-                        >
+                        <p-table [value]="mostView" [paginator]="true" [rows]="5" responsiveLayout="scroll">
                             <ng-template pTemplate="header">
                                 <tr>
                                     <th>Image</th>
@@ -64,12 +43,8 @@
                             <ng-template pTemplate="body" let-product>
                                 <tr>
                                     <td style="width: 15%; min-width: 5rem">
-                                        <img
-                                            src="{{ product.images[0] }}"
-                                            class="shadow-4"
-                                            alt="{{ product.name }}"
-                                            width="50"
-                                        />
+                                        <img src="{{ product.images[0] }}" class="shadow-4" alt="{{ product.name }}"
+                                            width="50" onerror="this.onerror=null;this.src='/assets/no_prod.jpg';" />
                                     </td>
                                     <td style="width: 35%; min-width: 7rem">
                                         {{ product.name }}
@@ -88,12 +63,7 @@
                 <div class="col-6">
                     <div class="card">
                         <h5>Most Buy</h5>
-                        <p-table
-                            [value]="mostBuy"
-                            [paginator]="true"
-                            [rows]="5"
-                            responsiveLayout="scroll"
-                        >
+                        <p-table [value]="mostBuy" [paginator]="true" [rows]="5" responsiveLayout="scroll">
                             <ng-template pTemplate="header">
                                 <tr>
                                     <th>Image</th>
@@ -107,21 +77,15 @@
                                     </th>
                                     <th pSortableColumn="buyCount">
                                         Buy
-                                        <p-sortIcon
-                                            field="buyCount"
-                                        ></p-sortIcon>
+                                        <p-sortIcon field="buyCount"></p-sortIcon>
                                     </th>
                                 </tr>
                             </ng-template>
                             <ng-template pTemplate="body" let-product>
                                 <tr>
                                     <td style="width: 15%; min-width: 5rem">
-                                        <img
-                                            src="{{ product.images[0] }}"
-                                            class="shadow-4"
-                                            alt="{{ product.name }}"
-                                            width="50"
-                                        />
+                                        <img src="{{ product.images[0] }}" class="shadow-4" alt="{{ product.name }}"
+                                            width="50" onerror="this.onerror=null;this.src='/assets/no_prod.jpg';" />
                                     </td>
                                     <td style="width: 35%; min-width: 7rem">
                                         {{ product.name }}
