--- a/src/app/components/merchant-pages/merchant/merchant-request/merchant-request.component.html
+++ b/src/app/components/merchant-pages/merchant/merchant-request/merchant-request.component.html
@@ -26,9 +26,9 @@
                             City
                             <p-sortIcon field="cityName"></p-sortIcon>
                         </th>
-                        <th pSortableColumn="rating">
+                        <!-- <th pSortableColumn="rating">
                             Rating <p-sortIcon field="rating"></p-sortIcon>
-                        </th>
+                        </th> -->
 
                         <th></th>
                     </tr>
@@ -57,10 +57,10 @@
                             <span class="p-column-title">Rating</span>
                             {{merchant.city || 'Unknown'}}
                         </td>
-                        <td style="width: 14%; min-width: 10rem">
+                        <!-- <td style="width: 14%; min-width: 10rem">
                             <span class="p-column-title">Rating</span>
                             <p-rating [(ngModel)]="merchant.rating" [readonly]="true" [cancel]="false"></p-rating>
-                        </td>
+                        </td> -->
 
                         <td>
                             <div class="flex">
