--- a/src/app/components/merchant-pages/merchant/merchant.component.html
+++ b/src/app/components/merchant-pages/merchant/merchant.component.html
@@ -25,8 +25,8 @@
                             City
                             <p-sortIcon field="cityName"></p-sortIcon>
                         </th>
-                        <th pSortableColumn="rating">
-                            Rating <p-sortIcon field="rating"></p-sortIcon>
+                        <th pSortableColumn="isSuspended">
+                            Status <p-sortIcon field="isSuspended"></p-sortIcon>
                         </th>
 
                         <th></th>
@@ -57,8 +57,9 @@
                             {{ merchant.cityName }}
                         </td>
                         <td style="width: 14%; min-width: 10rem">
-                            <span class="p-column-title">Rating</span>
-                            <p-rating [ngModel]="merchant.rating || 0" [readonly]="true" [cancel]="false"></p-rating>
+                            <span class="p-column-title">Status</span>
+                            <p-tag [value]="merchant.isSuspended ? 'Suspended' : 'Active'"
+                                [severity]="merchant.isSuspended ? 'danger' : 'success'"></p-tag>
                         </td>
 
                         <td>
