--- a/src/app/components/user-pages/merchant-shop/merchant-shop.component.html
+++ b/src/app/components/user-pages/merchant-shop/merchant-shop.component.html
@@ -1,5 +1,5 @@
-<div class="info mx-4">
-    <div class="cover-img mb-4" style="background-image: url({{merchantDetail.merchantAvatar}}); height: 200px;">
+<div *ngIf="merchantDetail" class="info mx-4">
+    <div class="cover-img mb-4" style="background-image: url({{merchantDetail?.merchantAvatar}}); height: 200px;">
         <!-- <img width="100px" height="100px" src="{{ merchantDetail.merchantAvatar }}" alt="" class="rounded-circle logo"
             onerror="this.onerror=null;this.src='/assets/no_user.png';" /> -->
     </div>
