fix: update checkout

--- a/src/app/components/auth/forgot-password/forgot-password.component.html
+++ b/src/app/components/auth/forgot-password/forgot-password.component.html
@@ -37,7 +37,7 @@
 
                 <form *ngIf="email"
                     class="login_container_form d-flex flex-column col-12 col-sm-6 col-lg-3 p-4 rounded-2"
-                    [formGroup]="validateForm" (ngSubmit)="sendOTP()">
+                    [formGroup]="validateForm" (ngSubmit)="validate()" autocomplete="off">
                     <h4>Reset your password</h4>
                     <span class="my-4">
                         <h6>OTP</h6>
@@ -50,9 +50,8 @@
                     </span>
                     <span class="mb-1">
                         <h6>New Password</h6>
-                        <p-password class="inputtext w-100 mt-1 form-control" [toggleMask]="true"
-                            formControlName="newPassword" (focus)="clearErrorNotification()" [feedback]="false"
-                            autocomplete="off">
+                        <p-password class="inputtext w-100 mt-1" [toggleMask]="true" formControlName="newPassword"
+                            (focus)="clearErrorNotification()" [feedback]="false">
                         </p-password>
                         <div *ngIf="isSubmitted">
                             <small class="text-danger" *ngIf="
