--- a/src/app/components/user-pages/complete-checkout/complete-checkout.component.html
+++ b/src/app/components/user-pages/complete-checkout/complete-checkout.component.html
@@ -1,6 +1,3 @@
-<div
-  class="d-flex align-items-center justify-content-center"
-  style="height: 65vh"
->
-  <h1 class="text-success text-center">Transaction completed</h1>
+<div class="d-flex align-items-center justify-content-center" style="height: 71vh">
+    <h1 class="text-success text-center">Transaction completed</h1>
 </div>
