--- a/src/app/components/shared/add sub-category/add-sub-category.component.html
+++ b/src/app/components/shared/add sub-category/add-sub-category.component.html
@@ -1,14 +1,10 @@
-<div class="container" [formGroup]="addSubCategoryForm">
+<div class="container" [formGroup]="addSubCategoryForm" style="min-height: 250px;">
     <span class="p-float-label">
         <h6 class="addressLabel ps-0">Category</h6>
         <div class="d-flex gap-2">
             <div class="w-100">
-                <p-dropdown
-                    [options]="categoryOption"
-                    optionLabel="name"
-                    [autoDisplayFirst]="false"
-                    formControlName="category"
-                >
+                <p-dropdown [options]="categoryOption" optionLabel="name" [autoDisplayFirst]="false"
+                    formControlName="category">
                 </p-dropdown>
             </div>
         </div>
@@ -16,21 +12,12 @@
     <div class="d-flex flex-column w-100">
         <span class="p-float-label">
             <h6 class="addressLabel ps-0">Name</h6>
-            <input
-                class="inputtext ps-1 w-100"
-                type="text"
-                pInputText
-                formControlName="name"
-            />
+            <input class="inputtext ps-1 w-100" type="text" pInputText formControlName="name" />
         </span>
     </div>
-    <div class="button-group d-flex justify-content-center mt-2">
-        <button
-            type="submit"
-            class="btn btn-primary text-nowrap"
-            [disabled]="addSubCategoryForm.invalid"
-            (click)="addNewSubCategory()"
-        >
+    <div class="button-group d-flex justify-content-center mt-4">
+        <button type="submit" class="btn btn-primary text-nowrap" [disabled]="addSubCategoryForm.invalid"
+            (click)="addNewSubCategory()">
             Add Sub-Category
         </button>
     </div>
